===============================================================================
Change history for quantum-tunneling
===============================================================================

DONE:
4/28/08 - add PhetLookAndFeel to main
********* version 1.09.00 (18718)
11/29/07 - change name to "Quantum Tunneling and Wave Packets"
11/9/07 - move about.credits property to localization file
10/9/07 - migrate "Reset All" and "set minimum width" features to phetcommon ControlPanel
10/9/07 - switch persistence to phetcommon's XMLPersistenceManager
9/11/07 - rename AbstractModule and AbstractControlPanel, add QT prefix
8/27/07 - replace "Lucida Sans" with PhetDefaultFont.getDefaultFontName()
8/16/07 - convert persistence code to use IProguardKeepInterface instead of QTSerializable
********* version 1.08.00 (17033)
7/27/07 - new version published as part of new website deployment
7/10/07 - fix load/save so that it doesn't change the clock's run state unless it's for the active module
7/10/07 - fix modules so that they don't explicty start the clock
7/2/07 - wrap the body of main in invokeLater
6/15/07 - convert description properties to well-formed HTML
6/12/07 - add Schmidt-Lee and Richardson to credits
5/14/07 - replace QTClockControls with ClockControlPanelWithTimeDisplay
5/10/07 - upgrade jfreechart from 1.0.0 to 1.0.5, test
4/7/07 - encapsulate PhetProjectConfig in QTResources
4/6/07 - set locale in Spanish JNLP file via javaws.locale property
4/6/07 - convert from SimStrings to PhetProjectConfig, encapsulate in QTStrings
3/27/07 - remove canvas argument from all ancestor nodes of PSwing in scenegraph
3/20/07 - use DialogUtils in phetcommon
3/20/07 - move ColorChooserFactory to phetcommon
3/20/07 - move ArgUtils to phet.common.util.CommandLineUtils
3/14/07 - rename SimStrings files to have basename quantumtunneling_strings
3/14/07 - move images to data/quantumtunneling/images to avoid namespace collisions
3/14/07 - get version and credits from properties file