@@ -3,6 +3,7 @@ Change history for rutherford-scattering
 ===============================================================================
 
 DONE:
+5/20/08 - call new PhetFont explicitly to create fonts
 11/9/07 - move about.credits property to localization file
 10/9/07 - migrate "Reset All" and "set minimum width" features to phetcommon ControlPanel
 9/11/07 - rename AbstractControlPanel and AbstractModule to prevent name collisions with other sims
