@@ -3,6 +3,8 @@ Change history for quantum-tunneling
 ===============================================================================
 
 DONE:
+5/20/08 - reduce vertical spacing in control panel to remove Mac scrollbars
+5/20/08 - call new PhetFont explicitly to create fonts
 4/28/08 - add PhetLookAndFeel to main
 ********* version 1.09.00 (18718)
 11/29/07 - change name to "Quantum Tunneling and Wave Packets"
